@@ -10,10 +10,10 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
+
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
@@ -133,7 +133,7 @@ public class RolesAndPermissionsService {
     }
 
     public List<RoleModel> getViewableRoles() {
-        return Collections.singletonList(roleDao.getDataOwner());
+        return List.of(roleDao.getDataOwner());
     }
 
     public List<RoleModel> getSchoolRoles() {
