@@ -4,7 +4,7 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 
-import java.util.Arrays;
+import java.util.List;
 import org.datavaultplatform.broker.controllers.ReviewsController;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
@@ -32,11 +32,11 @@ public class ReviewsControllerAuthTest extends BaseControllerAuthTest {
   void testGetDepositReviews() {
 
     when(controller.getDepositReviews(USER_ID_1, "vault-review-1234")).thenReturn(
-        Arrays.asList(AuthTestData.DEPOSIT_REVIEW_1, AuthTestData.DEPOSIT_REVIEW_2));
+        List.of(AuthTestData.DEPOSIT_REVIEW_1, AuthTestData.DEPOSIT_REVIEW_2));
 
     checkWorksWhenAuthenticatedFailsOtherwise(
         get("/vaultreviews/{vaultReviewId}/depositreviews", "vault-review-1234"),
-        Arrays.asList(AuthTestData.DEPOSIT_REVIEW_1, AuthTestData.DEPOSIT_REVIEW_2));
+        List.of(AuthTestData.DEPOSIT_REVIEW_1, AuthTestData.DEPOSIT_REVIEW_2));
 
     verify(controller).getDepositReviews(USER_ID_1, "vault-review-1234");
   }
@@ -57,11 +57,11 @@ public class ReviewsControllerAuthTest extends BaseControllerAuthTest {
   @Test
   void testGetVaultReviews() throws Exception {
     when(controller.getVaultReviews(USER_ID_1, "vault-id-123")).thenReturn(
-        Arrays.asList(AuthTestData.REVIEW_INFO_1, AuthTestData.REVIEW_INFO_2));
+        List.of(AuthTestData.REVIEW_INFO_1, AuthTestData.REVIEW_INFO_2));
 
     checkWorksWhenAuthenticatedFailsOtherwise(
         get("/vaults/{vaultid}/vaultreviews", "vault-id-123"),
-        Arrays.asList(AuthTestData.REVIEW_INFO_1, AuthTestData.REVIEW_INFO_2));
+        List.of(AuthTestData.REVIEW_INFO_1, AuthTestData.REVIEW_INFO_2));
 
     verify(controller).getVaultReviews(USER_ID_1, "vault-id-123");
   }
