@@ -1,22 +1,21 @@
 package org.datavaultplatform.common.model.dao;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 import org.datavaultplatform.broker.app.DataVaultBrokerApp;
 import org.datavaultplatform.broker.test.AddTestProperties;
 import org.datavaultplatform.broker.test.BaseReuseDatabaseTest;
 import org.datavaultplatform.common.model.DepositChunk;
+import org.datavaultplatform.common.model.MariaDBConstants;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.TestPropertySource;
+import java.security.SecureRandom;
+import static org.junit.jupiter.api.Assertions.*;
 
 @SpringBootTest(classes = DataVaultBrokerApp.class)
 @AddTestProperties
@@ -41,6 +40,7 @@ public class DepositChunkDAOIT extends BaseReuseDatabaseTest {
 
     dao.save(depositChunk1);
     assertNotNull(depositChunk1.getID());
+    UUIDUtils.assertIsUUID(depositChunk1.getID());
     assertEquals(1, dao.count());
 
     dao.save(depositChunk2);
@@ -53,6 +53,20 @@ public class DepositChunkDAOIT extends BaseReuseDatabaseTest {
     DepositChunk foundById2 = dao.findById(depositChunk2.getID()).get();
     assertEquals(depositChunk2.getArchiveDigest(), foundById2.getArchiveDigest());
   }
+
+  @Test
+  void testWriteThenReadBLOB() {
+    DepositChunk depositChunk1 = getDepositChunkWithRandomEncIV(MariaDBConstants.MARIADB_MAX_BLOB_SIZE);
+
+    dao.save(depositChunk1);
+    assertNotNull(depositChunk1.getID());
+
+    DepositChunk foundById1 = dao.findById(depositChunk1.getID()).get();
+    assertNotSame(depositChunk1, foundById1);
+    assertEquals(depositChunk1.getArchiveDigest(), foundById1.getArchiveDigest());
+    assertArrayEquals(depositChunk1.getEncIV(), foundById1.getEncIV());
+  }
+
 
   @Test
   void testList() {
@@ -104,19 +118,19 @@ public class DepositChunkDAOIT extends BaseReuseDatabaseTest {
     assertEquals(2, dao.count());
 
     assertEquals(
-        Stream.of(depositChunk1, depositChunk2).map(DepositChunk::getID).sorted().collect(Collectors.toList()),
-        dao.list("id").stream().map(DepositChunk::getID).collect(Collectors.toList())
+        Stream.of(depositChunk1, depositChunk2).map(DepositChunk::getID).sorted().toList(),
+        dao.list("id").stream().map(DepositChunk::getID).toList()
     );
 
     assertEquals(
-        Stream.of(depositChunk2, depositChunk1).map(DepositChunk::getID).collect(Collectors.toList()),
-        dao.list("chunkNum").stream().map(DepositChunk::getID).collect(Collectors.toList())
+        Stream.of(depositChunk2, depositChunk1).map(DepositChunk::getID).toList(),
+        dao.list("chunkNum").stream().map(DepositChunk::getID).toList()
     );
 
     // Anything other than id will be sorted by chunkNum ASC
     assertEquals(
-        Stream.of(depositChunk2, depositChunk1).map(DepositChunk::getID).collect(Collectors.toList()),
-        dao.list("XXX").stream().map(DepositChunk::getID).collect(Collectors.toList())
+        Stream.of(depositChunk2, depositChunk1).map(DepositChunk::getID).toList(),
+        dao.list("XXX").stream().map(DepositChunk::getID).toList()
     );
   }
 
@@ -137,6 +151,16 @@ public class DepositChunkDAOIT extends BaseReuseDatabaseTest {
     result.setArchiveDigest("ad1");
     return result;
   }
+
+  DepositChunk getDepositChunkWithRandomEncIV(int length) {
+    DepositChunk result = getDepositChunk1();
+    SecureRandom random = new SecureRandom();
+    byte[] randomBytes = new byte[length];
+    random.nextBytes(randomBytes);
+    result.setEncIV(randomBytes);
+    return result;
+  }
+
 
   DepositChunk getDepositChunk2(){
     DepositChunk result = new DepositChunk();
