@@ -5,12 +5,14 @@ import static org.datavaultplatform.broker.test.TestUtils.NOW;
 import static org.datavaultplatform.broker.test.TestUtils.ONE_YEAR_AGO;
 import static org.datavaultplatform.broker.test.TestUtils.THREE_YEARS_AGO;
 import static org.datavaultplatform.broker.test.TestUtils.TWO_YEARS_AGO;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
-
+import static org.junit.jupiter.api.Assertions.assertNotSame;
+import java.security.SecureRandom;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.HashSet;
+import java.util.Set;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -23,6 +25,7 @@ import org.datavaultplatform.common.model.Deposit.Status;
 import org.datavaultplatform.common.model.Group;
 import org.datavaultplatform.common.model.Permission;
 import org.datavaultplatform.common.model.Vault;
+import org.datavaultplatform.common.model.MariaDBConstants;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -62,6 +65,7 @@ public class DepositDAOIT extends BaseReuseDatabaseTest {
 
     dao.save(depositReview1);
     assertNotNull(depositReview1.getID());
+    UUIDUtils.assertIsUUID(depositReview1.getID());
     assertEquals(1, dao.count());
 
     dao.save(depositReview2);
@@ -73,6 +77,19 @@ public class DepositDAOIT extends BaseReuseDatabaseTest {
 
     Deposit foundById2 = dao.findById(depositReview2.getID()).get();
     assertEquals(depositReview2.getName(), foundById2.getName());
+  }
+
+  @Test
+  void testWriteThenReadBLOB() {
+    Deposit depositReview1 = getDepositWithRandomEncIV(MariaDBConstants.MARIADB_MAX_BLOB_SIZE);
+
+    dao.save(depositReview1);
+    assertNotNull(depositReview1.getID());
+
+    Deposit foundById1 = dao.findById(depositReview1.getID()).get();
+    assertNotSame(depositReview1, foundById1);
+    assertEquals(depositReview1.getName(), foundById1.getName());
+    assertArrayEquals(depositReview1.getEncIV(), foundById1.getEncIV());
   }
 
   @Test
@@ -125,7 +142,7 @@ public class DepositDAOIT extends BaseReuseDatabaseTest {
 
     List<Deposit> completed = dao.completed();
     assertEquals(
-        new HashSet<>(Arrays.asList(deposit1.getID(),deposit3.getID())),
+        Set.of(deposit1.getID(),deposit3.getID()),
         completed.stream().map(Deposit::getID).collect(Collectors.toSet()));
   }
 
@@ -281,18 +298,15 @@ public class DepositDAOIT extends BaseReuseDatabaseTest {
 
     List<Deposit> items4 = dao.list("name3","allowed2","name","asc",0,Integer.MAX_VALUE);
     assertEquals(3, items4.size());
-    assertEquals(Arrays.asList("name3","name34","name345"),items4.stream().map(Deposit::getName).collect(
-            Collectors.toList()));
+    assertEquals(List.of("name3","name34","name345"),items4.stream().map(Deposit::getName).toList());
 
     List<Deposit> items5 = dao.list("name3","allowed2","name","asc",1,Integer.MAX_VALUE);
     assertEquals(2, items5.size());
-    assertEquals(Arrays.asList("name34","name345"),items5.stream().map(Deposit::getName).collect(
-        Collectors.toList()));
+    assertEquals(List.of("name34","name345"),items5.stream().map(Deposit::getName).toList());
 
     List<Deposit> items6 = dao.list("name3","allowed2","name","desc",1,Integer.MAX_VALUE);
     assertEquals(2, items6.size());
-    assertEquals(Arrays.asList("name34","name345"),items5.stream().map(Deposit::getName).collect(
-        Collectors.toList()));
+    assertEquals(List.of("name34","name345"),items5.stream().map(Deposit::getName).toList());
 
     List<Deposit> items7 = dao.list("name1","allowed1","name","asc",1,1);
     assertEquals(1, items7.size());
@@ -763,8 +777,8 @@ public class DepositDAOIT extends BaseReuseDatabaseTest {
 
   void checkSameDepositNames(Collection<Deposit> actual, Deposit... expected){
     assertEquals(
-        Arrays.stream(expected).map(Deposit::getName).sorted().collect(Collectors.toList()),
-        actual.stream().map(Deposit::getName).sorted().collect(Collectors.toList()));
+        Arrays.stream(expected).map(Deposit::getName).sorted().toList(),
+        actual.stream().map(Deposit::getName).sorted().toList());
   }
 
   @BeforeEach
@@ -785,6 +799,15 @@ public class DepositDAOIT extends BaseReuseDatabaseTest {
     result.setCreationTime(NOW);
     result.setHasPersonalData(false);
     result.setStatus(Status.COMPLETE);
+    return result;
+  }
+
+  Deposit getDepositWithRandomEncIV(int length) {
+    Deposit result = getDeposit1();
+    SecureRandom random = new SecureRandom();
+    byte[] randomBytes = new byte[length];
+    random.nextBytes(randomBytes);
+    result.setEncIV(randomBytes);
     return result;
   }
 
