@@ -3,7 +3,6 @@ package org.datavaultplatform.common.model.dao;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-import java.util.Arrays;
 import java.util.List;
 import lombok.extern.slf4j.Slf4j;
 import org.datavaultplatform.broker.app.DataVaultBrokerApp;
@@ -39,6 +38,7 @@ public class PendingDataCreatorDAOIT extends BaseReuseDatabaseTest {
 
     dao.save(pendingDataCreator1);
     assertNotNull(pendingDataCreator1.getId());
+    UUIDUtils.assertIsUUID(pendingDataCreator1.getId());
     assertEquals(1, count());
 
     dao.save(pendingDataCreator2);
@@ -120,7 +120,7 @@ public class PendingDataCreatorDAOIT extends BaseReuseDatabaseTest {
 
     PendingDataCreator pendingDataCreator2 = getPendingDataCreator2();
 
-    dao.save(Arrays.asList(pendingDataCreator1,pendingDataCreator2));
+    dao.save(List.of(pendingDataCreator1,pendingDataCreator2));
 
     assertNotNull(pendingDataCreator1.getId());
     assertNotNull(pendingDataCreator2.getId());
