@@ -158,7 +158,7 @@ public abstract class BaseSFTPFileSystemIT {
   @Test
   @SneakyThrows
   void testUsableSpace() {
-    assertThat(getSftpDriver().getUsableSpace()).isGreaterThan(10_000_000_000L);
+    assertThat(getSftpDriver().getUsableSpace()).isGreaterThan(1_000_000_000L);
   }
 
   @Test
@@ -277,7 +277,7 @@ public abstract class BaseSFTPFileSystemIT {
     getSftpDriver().retrieve(retrievePath, toDirectory, new Progress());
     List<File> files = Files.list(toDirectory.toPath())
         .map(Path::toFile)
-        .collect(Collectors.toList());
+        .toList();
 
     File expected = new File(toDirectory, FROM_DV_FILE_NAME);
     assertEquals(expected, files.get(0));
@@ -616,12 +616,12 @@ public abstract class BaseSFTPFileSystemIT {
 
   @SneakyThrows
   private String readFile(File file) {
-    return new String(Files.readAllBytes(file.toPath()), StandardCharsets.UTF_8);
+    return Files.readString(file.toPath(), StandardCharsets.UTF_8);
   }
 
   @SneakyThrows
   private void writeToFile(File file, String contents) {
-    Files.write(file.toPath(), contents.getBytes(StandardCharsets.UTF_8));
+    Files.writeString(file.toPath(), contents, StandardCharsets.UTF_8);
   }
 
   @AfterEach
@@ -664,6 +664,6 @@ public abstract class BaseSFTPFileSystemIT {
     }
     getLog().info("Listing {} files took [{}]ms", files.size(), diffMS);
     assertThat(files).hasSizeGreaterThan(1_000);
-    assertThat(Duration.ofMillis(diffMS)).isLessThan(Duration.ofSeconds(5));
+    assertThat(Duration.ofMillis(diffMS)).isLessThan(Duration.ofSeconds(40));
   }
 }
