@@ -1,9 +1,9 @@
 package org.datavaultplatform.common.model.dao.custom;
 
 import java.util.ArrayList;
-import java.util.Collections;
+
 import java.util.List;
-import javax.persistence.EntityManager;
+import jakarta.persistence.EntityManager;
 import org.datavaultplatform.common.model.Group;
 import org.datavaultplatform.common.model.Group_;
 import org.datavaultplatform.common.model.Permission;
@@ -24,7 +24,7 @@ public class GroupCustomDAOImpl extends BaseCustomDAOImpl implements GroupCustom
             return new ArrayList<>();
         }
         helper.setOrderByHelper((cb,rt)->
-            Collections.singletonList(cb.asc(rt.get(Group_.NAME))));
+            List.of(cb.asc(rt.get(Group_.NAME))));
         List<Group> groups = helper.getItems();
         return groups;
     }
