@@ -5,7 +5,6 @@ import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.Callable;
 import java.util.concurrent.TimeUnit;
@@ -74,7 +73,7 @@ public class TaskExecutorTest {
     executor.add(() -> "two");
     executor.add(() -> "three");
     executor.execute(results::add);
-    assertEquals(Arrays.asList("one", "two", "three"), results);
+    assertEquals(List.of("one", "two", "three"), results);
   }
 
   @Test
