@@ -16,14 +16,13 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
+
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.datavaultplatform.webapp.test.ProfileStandalone;
 import org.datavaultplatform.webapp.test.TestClockConfig;
 import org.datavaultplatform.webapp.test.TestUtils;
 import org.hamcrest.Matchers;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -45,8 +44,8 @@ import org.springframework.test.web.servlet.ResultActions;
 @TestPropertySource(properties = "management.endpoints.web.exposure.include=*")
 public class ActuatorTest {
 
-  private static final List<String> PUBLIC_ENDPOINTS = Arrays.asList("info","health","customtime", "metrics", "memoryinfo");
-  private static final List<String> PRIVATE_ENDPOINTS = Arrays.asList("env","loggers","mappings","beans");
+  private static final List<String> PUBLIC_ENDPOINTS = List.of("info","health","customtime", "metrics", "memoryinfo");
+  private static final List<String> PRIVATE_ENDPOINTS = List.of("env","loggers","mappings","beans");
 
   @Autowired
   ObjectMapper mapper;
@@ -89,7 +88,7 @@ public class ActuatorTest {
 
     List<String> elements = Arrays.stream(classpath.split(sep))
         .filter(elem -> elem.endsWith("classes"))
-        .collect(Collectors.toList());
+        .toList();
 
     elements.forEach(el -> log.info("path element [{}]", el));
 
@@ -110,11 +109,13 @@ public class ActuatorTest {
         .andReturn();
 
     String json = mvcResult.getResponse().getContentAsString();
-    Map<String,String> infoMap = mapper.createParser(json).readValueAs(Map.class);
+    try (var parser = mapper.createParser(json)) {
+      Map<String, String> infoMap = parser.readValueAs(Map.class);
 
-    assertTrue(infoMap.containsKey("current-time"));
-    String ct = infoMap.get("current-time");
-    Assertions.assertEquals("Tue Mar 29 14:15:16 BST 2022",ct);
+      assertTrue(infoMap.containsKey("current-time"));
+      String ct = infoMap.get("current-time");
+      assertEquals("Tue Mar 29 14:15:16 BST 2022", ct);
+    }
   }
 
   @Test
@@ -126,17 +127,18 @@ public class ActuatorTest {
             .andReturn();
 
     String json = mvcResult.getResponse().getContentAsString();
-    Map<String,Object> infoMap = mapper.createParser(json).readValueAs(Map.class);
+    try (var parser = mapper.createParser(json)) {
+      Map<String,Object> infoMap = parser.readValueAs(Map.class);
 
-    String ct = (String)infoMap.get("timestamp");
-    Assertions.assertEquals("2022-03-29T13:15:16.101Z",ct);
+      String ct = (String)infoMap.get("timestamp");
+      assertEquals("2022-03-29T13:15:16.101Z",ct);
 
-    assertTrue(infoMap.containsKey("memory"));
-    Map<String,Object> innerMap = (Map<String,Object>)infoMap.get("memory");
-    assertTrue(innerMap.containsKey("total"));
-    assertTrue(innerMap.containsKey("free"));
-    assertTrue(innerMap.containsKey("max"));
-
+      assertTrue(infoMap.containsKey("memory"));
+      Map<String,Object> innerMap = (Map<String,Object>)infoMap.get("memory");
+      assertTrue(innerMap.containsKey("total"));
+      assertTrue(innerMap.containsKey("free"));
+      assertTrue(innerMap.containsKey("max"));
+    }
   }
 
   @Test
